--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,14 @@
 	margin-top: 0px;
 }
 
+.page {
+    bottom: 0;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    width: 100%;
+}
+
 /*----------------*\
  *  Input Style   *
 \*----------------*/
